add compinfo for Telekom, remove redundant icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -300,7 +300,7 @@
 	<item component="ComponentInfo{at.oebb.ts/at.oebb.ts.SplashActivity}" drawable="obb" />
 	<item component="ComponentInfo{at.ralaweb.ralaprogramme.subnetztabelle.unlocker/at.ralaweb.ralaprogramme.subnetztabelle.common.UnlockActivity}" drawable="subnettable" />
 	<item component="ComponentInfo{at.ralaweb.ralaprogramme.subnetztabelle/at.ralaweb.ralaprogramme.subnetztabelle.MainActivity}" drawable="subnettable" />
-	<item component="ComponentInfo{at.tmobile.android.myt/com.telekom.oneapp.launcher.components.launcher.LauncherActivity}" drawable="mein_magenta_deutsche_telekom" />
+	<item component="ComponentInfo{at.tmobile.android.myt/com.telekom.oneapp.launcher.components.launcher.LauncherActivity}" drawable="telekom" />
 	<item component="ComponentInfo{at.tomtasche.reader/at.tomtasche.reader.ui.activity.MainActivity}" drawable="opendocument_reader" />
 	<item component="ComponentInfo{at.wienerlinien.wienmobillab/at.upstream.citymobil.feature.splash.SplashActivity}" drawable="wienmobil" />
 	<item component="ComponentInfo{at.wienerlinien.wienmobillab/at.upstream.citymobil.feature.SplashActivity}" drawable="wienmobil" />
@@ -9225,7 +9225,7 @@
 	<item component="ComponentInfo{de.taxfix/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="taxfix" />
 	<item component="ComponentInfo{de.taxfix/de.taxfix.MainActivity}" drawable="taxfix" />
 	<item component="ComponentInfo{de.taz.android.app.free/de.taz.app.android.ui.splash.SplashActivity}" drawable="taz" />
-	<item component="ComponentInfo{de.telekom.android.customercenter/de.telekom.android.customercenter.ui.activities.MainActivity}" drawable="mein_magenta_deutsche_telekom" />
+	<item component="ComponentInfo{de.telekom.android.customercenter/de.telekom.android.customercenter.ui.activities.MainActivity}" drawable="telekom" />
 	<item component="ComponentInfo{de.tellonym.app/de.tellonym.app.MainActivity}" drawable="tellonym" />
 	<item component="ComponentInfo{de.thecode.android.tazreader/de.thecode.android.tazreader.start.StartActivity}" drawable="taz" />
 	<item component="ComponentInfo{de.theorie24.fs.auto/de.theorie24.fs.auto.MainActivity}" drawable="fuhrerschein_basic" />
