--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11460,7 +11460,7 @@
 	<item component="ComponentInfo{shubh.ruthless/amirz.shade.ShadeLauncher}" drawable="ruthless_launcher" />
 	<item component="ComponentInfo{shubh.ruthless/amirz.shade.ShadeSettings}" drawable="ruthless_launcher" />
 	<item component="ComponentInfo{side.quest.mobile/side.quest.mobile.MainActivity}" drawable="sidequest" />
-	<item component="ComponentInfo{sinet.startup.inDriver/sinet.startup.inDriver.ui.splash.SplashActivity}" drawable="indriver" />
+	<item component="ComponentInfo{sinet.startup.inDriver/sinet.startup.inDriver.ui.splash.SplashActivity}" drawable="indrive" />
 	<item component="ComponentInfo{site.leos.apps.lespas/site.leos.apps.lespas.LesPas}" drawable="les_pas" />
 	<item component="ComponentInfo{site.leos.apps.lespas/site.leos.apps.lespas.MainActivity}" drawable="les_pas" />
 	<item component="ComponentInfo{site.realanime.animlov.animlov/site.realanime.animlov.animlov.Splash}" drawable="animlovers" />
