--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -62,6 +62,7 @@
 	<item drawable="halan" />
 	<item drawable="heyjapan" />
 	<item drawable="home_exchange" />
+	<item drawable="indrive" />
 	<item drawable="innbucks" />
 	<item drawable="inspeckage" />
 	<item drawable="installerx" />
@@ -348,6 +349,7 @@
 	<item drawable="iceraven_alt_1" />
 	<item drawable="ikea_home_smart_alt_1" />
 	<item drawable="inbrowser_alt_1" />
+	<item drawable="indrive_alt_1" />
 	<item drawable="infinite_loop_alt_1" />
 	<item drawable="infinity_alt_1" />
 	<item drawable="innertune_alt_1" />
