--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -16,6 +16,7 @@
 	<item drawable="alltrans" />
 	<item drawable="amplenote" />
 	<item drawable="androidide" />
+	<item drawable="anghami" />
 	<item drawable="anilist" />
 	<item drawable="audio_share" />
 	<item drawable="autotagger" />
@@ -183,6 +184,7 @@
 	<item drawable="alto_alt_1" />
 	<item drawable="amazon_alexa_alt_1" />
 	<item drawable="amazon_workspaces_alt_1" />
+	<item drawable="anghami_alt_1" />
 	<item drawable="anova_alt_1" />
 	<item drawable="antennapod_alt_1" />
 	<item drawable="antennapod_alt_2" />
