--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12384,7 +12384,7 @@
 	<item component="ComponentInfo{de.felixnuesse.extract/ca.pkay.rcloneexplorer.Activities.MainActivity}" drawable="round_sync" />
 	<item component="ComponentInfo{com.dena.pokota/com.dena.pokota.feature.splash.SplashActivity}" drawable="pococha" />
 	<item component="ComponentInfo{pkp.ic.eicmobile/pkp.ic.eicmobile.MainActivity}" drawable="pkp_intercity" />
-	<item component="ComponentInfo{rk.android.app.pixelsearch/rk.android.app.pixelsearch.activites.HomeActivity}" drawable="pixel_search" />
+	<item component="ComponentInfo{rk.android.app.pixelsearch/rk.android.app.pixelsearch.activities.HomeActivity}" drawable="pixel_search" />
 	<item component="ComponentInfo{com.magix.android.mmjam/com.magix.android.mmj.start.StartActivity}" drawable="music_maker_jam" />
 	<item component="ComponentInfo{com.moneyfellows.mobileapp/com.moneyfellows.mobileapp.MainActivity}" drawable="money_fellows" />
 	<item component="ComponentInfo{com.aqupepgames.projectpepe/com.scopely.unity.ScopelyUnityActivity}" drawable="looney_tunes" />
