Updated 2 Icons, Added 4 Icons, Fixed 1 CompInfo (#685)
* Rename indriver.svg to indrive alt 1.svg

* Add files via upload

* Delete app/src/main/res/drawable-nodpi/indriver.png

* Update appfilter.xml

* Update appfilter.xml

* Add files via upload

* Add files via upload

* Update drawable.xml

* Update drawable.xml

* Rename indrive alt 1.svg to indrive_alt_1.svg

* Delete app/src/main/res/drawable-nodpi/indrive alt 1.png

* Add files via upload

* Add files via upload

* Add files via upload

* Update drawable.xml

* Update drawable.xml

* Add files via upload

* Update new_icons.yaml

* Update appfilter.xml

* Update appfilter.xml

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11460,7 +11460,7 @@
 	<item component="ComponentInfo{shubh.ruthless/amirz.shade.ShadeLauncher}" drawable="ruthless_launcher" />
 	<item component="ComponentInfo{shubh.ruthless/amirz.shade.ShadeSettings}" drawable="ruthless_launcher" />
 	<item component="ComponentInfo{side.quest.mobile/side.quest.mobile.MainActivity}" drawable="sidequest" />
-	<item component="ComponentInfo{sinet.startup.inDriver/sinet.startup.inDriver.ui.splash.SplashActivity}" drawable="indriver" />
+	<item component="ComponentInfo{sinet.startup.inDriver/sinet.startup.inDriver.ui.splash.SplashActivity}" drawable="indrive" />
 	<item component="ComponentInfo{site.leos.apps.lespas/site.leos.apps.lespas.LesPas}" drawable="les_pas" />
 	<item component="ComponentInfo{site.leos.apps.lespas/site.leos.apps.lespas.MainActivity}" drawable="les_pas" />
 	<item component="ComponentInfo{site.realanime.animlov.animlov/site.realanime.animlov.animlov.Splash}" drawable="animlovers" />
@@ -12384,7 +12384,7 @@
 	<item component="ComponentInfo{de.felixnuesse.extract/ca.pkay.rcloneexplorer.Activities.MainActivity}" drawable="round_sync" />
 	<item component="ComponentInfo{com.dena.pokota/com.dena.pokota.feature.splash.SplashActivity}" drawable="pococha" />
 	<item component="ComponentInfo{pkp.ic.eicmobile/pkp.ic.eicmobile.MainActivity}" drawable="pkp_intercity" />
-	<item component="ComponentInfo{rk.android.app.pixelsearch/rk.android.app.pixelsearch.activites.HomeActivity}" drawable="pixel_search" />
+	<item component="ComponentInfo{rk.android.app.pixelsearch/rk.android.app.pixelsearch.activities.HomeActivity}" drawable="pixel_search" />
 	<item component="ComponentInfo{com.magix.android.mmjam/com.magix.android.mmj.start.StartActivity}" drawable="music_maker_jam" />
 	<item component="ComponentInfo{com.moneyfellows.mobileapp/com.moneyfellows.mobileapp.MainActivity}" drawable="money_fellows" />
 	<item component="ComponentInfo{com.aqupepgames.projectpepe/com.scopely.unity.ScopelyUnityActivity}" drawable="looney_tunes" />
