--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -16,6 +16,7 @@
 	<item drawable="alltrans" />
 	<item drawable="amplenote" />
 	<item drawable="androidide" />
+	<item drawable="anghami" />
 	<item drawable="anilist" />
 	<item drawable="audio_share" />
 	<item drawable="autotagger" />
@@ -62,6 +63,7 @@
 	<item drawable="halan" />
 	<item drawable="heyjapan" />
 	<item drawable="home_exchange" />
+	<item drawable="indrive" />
 	<item drawable="innbucks" />
 	<item drawable="inspeckage" />
 	<item drawable="installerx" />
@@ -182,6 +184,7 @@
 	<item drawable="alto_alt_1" />
 	<item drawable="amazon_alexa_alt_1" />
 	<item drawable="amazon_workspaces_alt_1" />
+	<item drawable="anghami_alt_1" />
 	<item drawable="anova_alt_1" />
 	<item drawable="antennapod_alt_1" />
 	<item drawable="antennapod_alt_2" />
@@ -348,6 +351,7 @@
 	<item drawable="iceraven_alt_1" />
 	<item drawable="ikea_home_smart_alt_1" />
 	<item drawable="inbrowser_alt_1" />
+	<item drawable="indrive_alt_1" />
 	<item drawable="infinite_loop_alt_1" />
 	<item drawable="infinity_alt_1" />
 	<item drawable="innertune_alt_1" />
