--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12413,4 +12413,8 @@
 	<item component="ComponentInfo{com.nahdetmisr.adwaa/com.nahdetmisr.adwaa.MainActivity}" drawable="aladwaa" />
 	<item component="ComponentInfo{gg.statespace.aimlab/com.google.firebase.MessagingUnityPlayerActivity}" drawable="aim_labs" />
 	<item component="ComponentInfo{me.abwaab.abwaabv2_app/me.abwaab.abwaabv2_app.MainActivity}" drawable="abwaab" />
+	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.GoogleIcon}" drawable="nagram_google" />
+	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.ColorfulIcon}" drawable="nagram_colorful" />
+	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.DarkGreenIcon}" drawable="nagram_dark_green" />
+	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.NeonIcon}" drawable="nagram_neon" />
 </resources>
