--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -162,6 +162,10 @@
 	<item drawable="you_com" />
 	<item drawable="zamerican_english" />
 	<item drawable="zus_coffee" />
+	<item drawable="nagram_colorful" />
+	<item drawable="nagram_dark_green" />
+	<item drawable="nagram_google" />
+	<item drawable="nagram_neon" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -443,6 +447,10 @@
 	<item drawable="mysplash_alt_1" />
 	<item drawable="mysplash_alt_2" />
 	<item drawable="n_plus_launcher_alt_1" />
+	<item drawable="nagram_colorful" />
+	<item drawable="nagram_dark_green" />
+	<item drawable="nagram_google" />
+	<item drawable="nagram_neon" />
 	<item drawable="neko_alt_1" />
 	<item drawable="neo_backup_alt_1" />
 	<item drawable="neo_backup_alt_2" />
