--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -166,6 +166,7 @@
 	<item drawable="nagram_dark_green" />
 	<item drawable="nagram_google" />
 	<item drawable="nagram_neon" />
+	<item drawable="ivy_wallet" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -366,6 +367,7 @@
 	<item drawable="instacart_shopper_alt_1" />
 	<item drawable="instagram_alt_1" />
 	<item drawable="instagram_alt_2" />
+	<item drawable="ivy_wallet_alt_1" />
 	<item drawable="j2me_loader_alt_1" />
 	<item drawable="jerboa_for_lemmy_alt_1" />
 	<item drawable="jina_drawer_alt_1" />
