--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12417,4 +12417,5 @@
 	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.ColorfulIcon}" drawable="nagram_colorful" />
 	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.DarkGreenIcon}" drawable="nagram_dark_green" />
 	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.NeonIcon}" drawable="nagram_neon" />
+	<item component="ComponentInfo{com.ivy.wallet/com.ivy.wallet.RootActivity}" drawable="ivy_wallet" />
 </resources>
