--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12418,4 +12418,6 @@
 	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.DarkGreenIcon}" drawable="nagram_dark_green" />
 	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.NeonIcon}" drawable="nagram_neon" />
 	<item component="ComponentInfo{com.ivy.wallet/com.ivy.wallet.RootActivity}" drawable="ivy_wallet" />
+	<item component="ComponentInfo{com.machiav3lli.fdroid/com.machiav3lli.fdroid.NeoActivity}" drawable="neo_store" />
+	<item component="ComponentInfo{com.saggitt.omega.alpha/com.saggitt.omega.NeoLauncher}" drawable="neo_launcher" />
 </resources>
