--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -167,6 +167,9 @@
 	<item drawable="nagram_google" />
 	<item drawable="nagram_neon" />
 	<item drawable="ivy_wallet" />
+	<item drawable="neo_backup_alt_3" />
+	<item drawable="neo_launcher_alt_2" />
+	<item drawable="neo_store_alt_2" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -456,8 +459,11 @@
 	<item drawable="neko_alt_1" />
 	<item drawable="neo_backup_alt_1" />
 	<item drawable="neo_backup_alt_2" />
+	<item drawable="neo_backup_alt_3" />
 	<item drawable="neo_launcher_alt_1" />
+	<item drawable="neo_launcher_alt_2" />
 	<item drawable="neo_store_alt_1" />
+	<item drawable="neo_store_alt_2" />
 	<item drawable="nequi_alt_1" />
 	<item drawable="netflix_alt_1" />
 	<item drawable="nextcloud_cookbook_alt_1" />
