add custom header for celebrating 9k icons

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -121,6 +121,11 @@
         image="https://avatars.githubusercontent.com/u/108683123"
         link="https://github.com/GitGitro" />
     <contributor
+        name="GGRock70"
+        contribution="Header Image"
+        image="https://a.deviantart.net/avatars-big/g/g/ggrock70.gif"
+        link="https://www.deviantart.com/ggrock70/art/Its-Over-9000-Vector-335300676" />
+    <contributor
         name="Grabster"
         contribution="Icons"
         image="https://d33wubrfki0l68.cloudfront.net/737813d0bb8f3ec708dd1b47057aa3a37b6ad008/e0adb/images/self-portrait.jpg"
