add privacy policy URL in CandyBar

--- a/app/src/main/res/values/dashboard_configurations.xml
+++ b/app/src/main/res/values/dashboard_configurations.xml
@@ -309,7 +309,7 @@
     <!-- Privacy policy link.
         Leave empty to disable this.
         You can generate one from https://app-privacy-policy-generator.firebaseapp.com/ -->
-    <string name="privacy_policy_link"></string>
+    <string name="privacy_policy_link">https://delta-icons.github.io/privacy_policy</string>
 
     <!-- Terms and Conditions link.
         Leave empty to disable this.
