--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -1281,7 +1281,7 @@
 	<item component="ComponentInfo{com.antutu.benchmark.full/com.antutu.benchmark.full.MainActivity}" drawable="antutu_benchmark" />
 	<item component="ComponentInfo{com.anydesk.anydeskandroid/com.anydesk.anydeskandroid.gui.activity.MainActivity}" drawable="anydesk" />
 	<item component="ComponentInfo{com.anydo/com.anydo.activity.SplashActivity}" drawable="anydo" />
-	<item component="ComponentInfo{com.anytypeio.anytype/com.anytypeio.anytype.ui.main.MainActivity}" drawable="anytype" />
+	<item component="ComponentInfo{com.anytypeio.anytype/com.anytypeio.anytype.ui.main.MainActivity}" drawable="anytype_legacy" />
 	<item component="ComponentInfo{com.anz.android.gomoney/com.anz.android.gomoney.controller.GoMoneyActivity}" drawable="bank" />
 	<item component="ComponentInfo{com.ao.minimalkwgt/org.kustom.api.dashboard.DashboardActivity}" drawable="minimal_kwgt" />
 	<item component="ComponentInfo{com.ao.snakekwgt/org.kustom.api.dashboard.DashboardActivity}" drawable="snake_kwgt" />
