--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -2157,7 +2157,7 @@
 	<item drawable="anysoftkeyboard" />
 	<item drawable="anything_to_pip" />
 	<item drawable="anytracker" />
-	<item drawable="anytype" />
+	<item drawable="anytype_legacy" />
 	<item drawable="anywhere" />
 	<item drawable="aol" />
 	<item drawable="aora" />
