Add Boost for Lemmy ComponentInfo

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -6340,6 +6340,7 @@
 	<item component="ComponentInfo{com.ru.dixy/com.dixy.MainActivity}" drawable="dixy" />
 	<item component="ComponentInfo{com.ru.notifications.vk/com.ru.notifications.vk.activity.MainActivity}" drawable="vk_notifications" />
 	<item component="ComponentInfo{com.ruanmei.ithome/com.ruanmei.ithome.MainFrameActivity}" drawable="it" />
+	<item component="ComponentInfo{com.rubenmayayo.lemmy/com.rubenmayayo.reddit.ui.submissions.subreddit.MainActivity}" drawable="boost" />
 	<item component="ComponentInfo{com.rubenmayayo.reddit/com.rubenmayayo.reddit.ui.submissions.subreddit.MainActivity}" drawable="boost" />
 	<item component="ComponentInfo{com.ruet_cse_1503050.ragib.appbackup.iap/com.ruet_cse_1503050.ragib.appbackup.iap.activities.LauncherActivity}" drawable="alpha_backup" />
 	<item component="ComponentInfo{com.ruet_cse_1503050.ragib.appbackup.pro/com.ruet_cse_1503050.ragib.appbackup.pro.activities.LauncherActivity}" drawable="alpha_backup" />
