--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -7911,6 +7911,113 @@
 	<item component="ComponentInfo{com.thetrainline/com.thetrainline.activities.home_screen.SplashScreenActivity}" drawable="trainline" />
 	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivity}" drawable="transit" />
 	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.TransitActivity}" drawable="transit" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityicontenyears}" drawable="transit_ten_years" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityiconneon}" drawable="transit_neon" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityiconfrozen}" drawable="transit_frozen" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityiconxmas}" drawable="transit_xmas" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytorontosubwayyellow}" drawable="transit_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytorontosubwaygreen}" drawable="transit_dark_green" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytorontosubwaylightblue}" drawable="transit_light_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytorontosubwaypurple}" drawable="transit_dark_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityoctranspored}" drawable="transit_red" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityoctranspogreen}" drawable="transit" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityoctranspoyellow}" drawable="transit_dark_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityoctranspoblue}" drawable="transit_light_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodemontrealgreen}" drawable="transit_dark_green" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodemontrealorange}" drawable="transit_orange" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodemontrealyellow}" drawable="transit_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodemontrealblue}" drawable="transit_light_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitynycsubwayblue}" drawable="transit_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitynycsubwayorange}" drawable="transit_orange" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitynycsubwayolive}" drawable="transit" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitynycsubwaybrown}" drawable="transit_dark_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitynycsubwaysilver}" drawable="transit_silver" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitynycsubwayyellow}" drawable="transit_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitynycsubwaygray}" drawable="transit_gray" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitynycsubwayred}" drawable="transit_red" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitynycsubwaygreen}" drawable="transit_dark_green" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitynycsubwaypurple}" drawable="transit_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityseptalightblue}" drawable="transit_light_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityseptaorange}" drawable="transit_orange" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityseptagreen}" drawable="transit_dark_green" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityseptapurple}" drawable="transit_dark_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitydcmetrored}" drawable="transit_red" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitydcmetroorange}" drawable="transit_orange_2" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitydcmetroblue}" drawable="transit_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitydcmetrogreen}" drawable="transit_dark_green" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitydcmetroyellow}" drawable="transit_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitydcmetrogray}" drawable="transit_gray_2" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybostontred}" drawable="transit_red" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybostontorange}" drawable="transit_orange" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybostontblue}" drawable="transit_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybostontgreen}" drawable="transit_dark_green" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybostontpurple}" drawable="transit_dark_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitychicagored}" drawable="transit_red" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitychicagoblue}" drawable="transit_light_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitychicagobrown}" drawable="transit_brown" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitychicagogreen}" drawable="transit_dark_green" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitychicagoorange}" drawable="transit_orange" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitychicagopink}" drawable="transit_pink" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitychicagopurple}" drawable="transit_dark_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitychicagoyellow}" drawable="transit_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityvancouvertranslinklightblue}" drawable="transit_light_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityvancouvertranslinkblue}" drawable="transit_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityvancouvertranslinkyellow}" drawable="transit_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityvancouvertranslinkorange}" drawable="transit_orange" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityvancouvertranslinkgray}" drawable="transit_brown" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityvancouvertranslinkpurple}" drawable="transit_dark_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitylametroblue}" drawable="transit_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitylametrored}" drawable="transit_red" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitylametrogreen}" drawable="transit" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitylametroyellow}" drawable="transit_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitylametropurple}" drawable="transit_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitylametroorange}" drawable="transit_orange" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitylametrosilver}" drawable="transit_gray_2" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonbrown}" drawable="transit_dark_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonred}" drawable="transit_red" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonyellow}" drawable="transit_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondongreen}" drawable="transit_dark_green" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonpink}" drawable="transit_pink" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonsilver}" drawable="transit_silver" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonpurple}" drawable="transit_dark_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonblack}" drawable="transit_black" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonblue}" drawable="transit_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonlightblue}" drawable="transit_light_blue_2" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonlightteal}" drawable="transit_light_teal" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonteal}" drawable="transit_teal" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonorange}" drawable="transit_orange_2" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitytransportforlondonolive}" drawable="transit" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparisyellow}" drawable="transit_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparisblue}" drawable="transit_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparisolive}" drawable="transit" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparispurple}" drawable="transit_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparisorange}" drawable="transit_orange_2" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparislightgreen}" drawable="transit_light_teal" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparispink}" drawable="transit_pink_2" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparispurple2}" drawable="transit_purple_2" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparislightolive}" drawable="transit_green" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparislightorange}" drawable="transit_dark_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparisbrown}" drawable="transit_brown" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparisgreen}" drawable="transit_dark_green" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparisteal}" drawable="transit_light_blue_2" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparispurple3}" drawable="transit_dark_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitymetrodeparismidgreen}" drawable="transit_teal" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityberlinubahnolive}" drawable="transit" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityberlinubahnred}" drawable="transit_red" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityberlinubahngreen}" drawable="transit_teal" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityberlinubahnyellow}" drawable="transit_yellow" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityberlinubahnbrown}" drawable="transit_brown" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityberlinubahnpurple}" drawable="transit_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityberlinubahnlightblue}" drawable="transit_light_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityberlinubahnblue}" drawable="transit_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivityberlinubahnorange}" drawable="transit_orange" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybuenosairessubtelightblue}" drawable="transit_light_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybuenosairessubtered}" drawable="transit_red" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybuenosairessubteblue}" drawable="transit_blue" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybuenosairessubtegreen}" drawable="transit_teal" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybuenosairessubtepurple}" drawable="transit_dark_purple" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybuenosairessubteorange}" drawable="transit_orange_2" />
+	<item component="ComponentInfo{com.thetransitapp.droid/com.thetransitapp.droid.shared.activity.SplashActivitybuenosairessubteyellow}" drawable="transit_yellow" />
 	<item component="ComponentInfo{com.thingsilikeapp/com.thingsilikeapp.android.onboarding.splash.view.SplashScreenActivity}" drawable="lyka" />
 	<item component="ComponentInfo{com.think_android.appmanagerpro.cbe/com.think_android.appmanagerpro.cbe.AppManagerPro}" drawable="appmonster"/>
 	<item component="ComponentInfo{com.think_android.appmanagerpro.cupcake/com.think_android.appmanagerpro.cupcake.AppManagerPro}" drawable="appmonster"/>
