--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,33 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="transit" />
+	<item drawable="transit_black" />
+	<item drawable="transit_blue" />
+	<item drawable="transit_brown" />
+	<item drawable="transit_dark_green" />
+	<item drawable="transit_dark_purple" />
+	<item drawable="transit_dark_yellow" />
+	<item drawable="transit_frozen" />
+	<item drawable="transit_gray" />
+	<item drawable="transit_gray_2" />
+	<item drawable="transit_green" />
+	<item drawable="transit_light_blue" />
+	<item drawable="transit_light_blue_2" />
+	<item drawable="transit_light_teal" />
+	<item drawable="transit_neon" />
+	<item drawable="transit_orange" />
+	<item drawable="transit_orange_2" />
+	<item drawable="transit_pink" />
+	<item drawable="transit_pink_2" />
+	<item drawable="transit_purple" />
+	<item drawable="transit_purple_2" />
+	<item drawable="transit_red" />
+	<item drawable="transit_silver" />
+	<item drawable="transit_teal" />
+	<item drawable="transit_ten_years" />
+	<item drawable="transit_xmas" />
+	<item drawable="transit_yellow" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -817,6 +844,33 @@
 	<item drawable="todoist_sunflower" />
 	<item drawable="todoist_tangerine" />
 	<item drawable="tower_of_fantasy_alt_1" />
+	<item drawable="transit_alt" />
+	<item drawable="transit_black" />
+	<item drawable="transit_blue" />
+	<item drawable="transit_brown" />
+	<item drawable="transit_dark_green" />
+	<item drawable="transit_dark_purple" />
+	<item drawable="transit_dark_yellow" />
+	<item drawable="transit_frozen" />
+	<item drawable="transit_gray" />
+	<item drawable="transit_gray_2" />
+	<item drawable="transit_green" />
+	<item drawable="transit_light_blue" />
+	<item drawable="transit_light_blue_2" />
+	<item drawable="transit_light_teal" />
+	<item drawable="transit_neon" />
+	<item drawable="transit_orange" />
+	<item drawable="transit_orange_2" />
+	<item drawable="transit_pink" />
+	<item drawable="transit_pink_2" />
+	<item drawable="transit_purple" />
+	<item drawable="transit_purple_2" />
+	<item drawable="transit_red" />
+	<item drawable="transit_silver" />
+	<item drawable="transit_teal" />
+	<item drawable="transit_ten_years" />
+	<item drawable="transit_xmas" />
+	<item drawable="transit_yellow" />
 	<item drawable="translate_you_alt_1" />
 	<item drawable="transmission_remote_alt_1" />
 	<item drawable="triplinx_alt_1" />
